--- a/Mushroom Wk1.ipynb
+++ b/Mushroom Wk1.ipynb
@@ -611,29 +611,29 @@
    "source": [
     "For reference: New column names to be assigned.\n",
     "\n",
-    "Class\n",
-    "Cap Shape => C_shape\n",
-    "Cap Surface => C_surface\n",
-    "Cap Color => C_color\n",
-    "Bruises\n",
-    "Odor\n",
-    "Gill Attachment => G_Attachment\n",
-    "Gill Spacing => G_spacing\n",
-    "Gill Size => G_Size\n",
-    "Gill Color => G_color\n",
-    "Stalk Shape => S_shape\n",
-    "Stalk Root => S_root\n",
-    "Stalk Surface Above Ring => S_surfaceAR\n",
-    "Stalk Surface Below Ring => S_surfaceBR\n",
-    "Stalk Color Above Ring => S_colorAR\n",
-    "Stalk Color Below Ring => S_colorBR\n",
-    "Veil Type => V_type\n",
-    "Veil Color => V_color\n",
-    "Ring Number => R_number\n",
-    "Ring Type => R_type\n",
-    "Spore Print Color => SporeCol\n",
-    "Population\n",
-    "Habitat"
+    "+ Class\n",
+    "+ Cap Shape => C_shape\n",
+    "+ Cap Surface => C_surface\n",
+    "+ Cap Color => C_color\n",
+    "+ Bruises\n",
+    "+ Odor\n",
+    "+ Gill Attachment => G_Attachment\n",
+    "+ Gill Spacing => G_spacing\n",
+    "+ Gill Size => G_Size\n",
+    "+ Gill Color => G_color\n",
+    "+ Stalk Shape => S_shape\n",
+    "+ Stalk Root => S_root\n",
+    "+ Stalk Surface Above Ring => S_surfaceAR\n",
+    "+ Stalk Surface Below Ring => S_surfaceBR\n",
+    "+ Stalk Color Above Ring => S_colorAR\n",
+    "+ Stalk Color Below Ring => S_colorBR\n",
+    "+ Veil Type => V_type\n",
+    "+ Veil Color => V_color\n",
+    "+ Ring Number => R_number\n",
+    "+ Ring Type => R_type\n",
+    "+ Spore Print Color => SporeCol\n",
+    "+ Population\n",
+    "+ Habitat"
    ]
   },
   {
