--- a/SQLPython Wk2.ipynb
+++ b/SQLPython Wk2.ipynb
@@ -29,8 +29,8 @@
     "# Create connection to sql server\n",
     "moviesDB = mysql.connector.connect(\n",
     "    host='127.0.0.1',\n",
-    "    user=\"root\",\n",
-    "    password=\"We@84kjqund\",\n",
+    "    user=\"username\",\n",
+    "    password=\"password\",\n",
     "    database=\"movies\",\n",
     "    auth_plugin='mysql_native_password'\n",
     ")\n",
